# butler_robot

ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/butler_robot/lib/butler_robot/: butler_node
ros2_ws/install/butler_robot/share/butler_robot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/src/butler_robot/: package.xml  setup.py
ros2_ws/src/butler_robot/butler_robot/: butler_node.py
