<?xml version="1.0"?>
<package format="2">
  <name>butler_robot</name>
  <version>0.0.0</version>
  <description>Butler robot</description>
  <maintainer email="harshv2719@gmail.com">anon</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <exec_depend>rclpy</exec_depend>
</package>

